--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
             <a href="" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
             <a href="" class="resume">Google Resume</a>
         </header>
+        <main>
+            <a href="" style="text-decoration: none;" class="main-body1">L</a>
+            <a href="" style="text-decoration: none;" class="main-body2">i</a>
+            <a href="" style="text-decoration: none;" class="main-body3">z</a>
+            <a href="" style="text-decoration: none;" class="main-body4">a</a>
+            <a href="" style="text-decoration: none;" class="main-body5">Kozhemyakina</a>
+            <div class="wrapper">
+                <div class="text">Анимация набора текста на CSS</div>
+            </div>
+        </main>
     </div> 
 </body>
 </html>
