--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
             <a href="" style="text-decoration: none;" class="main-body4">a</a>
             <a href="" style="text-decoration: none;" class="main-body5">Kozhemyakina</a>
             <div class="wrapper">
-                <div class="text">Анимация набора текста на CSS</div>
+                <div class="text">My name is Liza Kozhemyakina</div>
             </div>
+            <div class="box"></div>
+            <a class="search"><img src="img\premium-icon-search-3991270.png" alt=""></a>
         </main>
+        <footer>
+            <div class="made-by">© 2022 Elizaveta Kozhemyakina</div>
+        </footer>
     </div> 
 </body>
 </html>
