--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div id = "block-body">
         <header>
             <a href="" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
-            <a href="" class="resume">Google Resume</a>
+            <a href="C:\Users\U01\PycharmProjects\portfolio\resume.html" class="resume">Google Resume</a>
         </header>
         <main>
             <a href="" style="text-decoration: none;" class="main-body1">L</a>
