--- a/test.html
+++ b/test.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="static/test_style.css">
 </head>
 <body>
-    <div class="wrapper">
-        <div class="text">My name is Liza Kozhemyakina</div>
-    </div>
+    <header></header>
+    <footer></footer>
 </body>
 </html>
