--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div id = "block-body">
         <header>
-            <a href="" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
-            <a href="C:\Users\U01\PycharmProjects\portfolio\resume.html" class="resume">Google Resume</a>
+            <a href="contact.html" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
+            <a href="resume.html" class="resume">Google Resume</a>
         </header>
         <main>
             <a href="" style="text-decoration: none;" class="main-body1">L</a>
