--- a/resume.html
+++ b/resume.html
@@ -8,23 +8,47 @@
 </head>
 <body>
     <header>
-        <a href="" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
+        <a href="contact.html" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
         <div class="search-box"></div>
         <div class="box"></div>
         <a class="search"><img src="img\premium-icon-search-3991270.png" alt=""></a>
         <div class="text-search">Google Resume</div>
-        <a href="C:\Users\U01\PycharmProjects\portfolio\index.html" style="text-decoration: none;" class="main-body1">L</a>
-        <a href="C:\Users\U01\PycharmProjects\portfolio\index.html" style="text-decoration: none;" class="main-body2">i</a>
-        <a href="C:\Users\U01\PycharmProjects\portfolio\index.html" style="text-decoration: none;" class="main-body3">z</a>
-        <a href="C:\Users\U01\PycharmProjects\portfolio\index.html" style="text-decoration: none;" class="main-body4">a</a>
+        <a href="index.html" style="text-decoration: none;" class="main-body1">L</a>
+        <a href="index.html" style="text-decoration: none;" class="main-body2">i</a>
+        <a href="index.html" style="text-decoration: none;" class="main-body3">z</a>
+        <a href="index.html" style="text-decoration: none;" class="main-body4">a</a>
     </header>
     <main>
         <div class="text_main">
             <div class="text_main1">My skills</div>
             <div class="text_main2">Python, HTML+CSS, JavaScript, version control (Git, GitHub, Gitlab, etc.), databases(PostgreSQL)</div>
             <div class="text_main1">My works</div>
-            <div class="text_main2">To see my portfolio follow me on <a href="C:\Users\U01\PycharmProjects\portfolio\index.html" style="text-decoration: none;">GitHub</a></div>
+            <div class="text_main2">To see my portfolio follow me on <a href="https://github.com/KozhemyakinaElizaveta" target="_ blank" style="text-decoration: none;">GitHub</a></div>
         </div>
+        <div class="text_contact"></div>
+        <div class="text_contact1">Hire me</div>
+        <div class="text_contact2">We could work together?</div>
+        <form action="contact.html" method="get">
+            <button class="custom-btn btn-1"><span>Contact</span></button>
+        </form>
+        <div class="main_box"></div>
+        <div class="img_main"><img src="img\photo_2022-06-26_18-16-20.jpg"></div>
+        <div class="text_inf">
+            <div class="text_inf1">Kozhemyakina Elizaveta Romanovna</div>
+            <div class="text_inf2">frontend developer</div>
+            <div class="text_inf3">Age : 19 Occupation : Freelance Social network :</div>
+            <div class="text_inf3">Localization : Beloozersky, Moscow region, Russia</div>
+            <div class="text_inf3">Education : Moscow Technical University of Communications and Informatics (MTUCI)</div>
+            <div class="text_inf3">Occupation : Freelance</div>
+            <div class="text_inf3">Social network :</div>
+        </div>
+        <div class="line"></div>
+        <a href="https://vk.com/id230880631" target="_blank" class="vk"><img src="img\vk.png" alt=""></a>
+        <a href="http://t.me/romashka_ls"  target="_blank" class="tg"><img src="img\telegram.png" alt=""></a>
+        <a href="https://github.com/KozhemyakinaElizaveta" target="_blank" class="git"><img src="img\github.png" alt=""></a>
     </main>
+    <footer>
+        <div class="made-by">© 2022 Elizaveta Kozhemyakina</div>
+    </footer>
 </body>
 </html>
