--- a/test.html
+++ b/test.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="static/test_style.css">
 </head>
 <body>
-    <header></header>
-    <footer></footer>
+    <div class="wrapper">
+        <div class="text1">My name is Liza Kozhemyakina</div>
+        <div class="text2">Hi...</div>
+    </div>
 </body>
 </html>
