--- a/resume.html
+++ b/resume.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <a href="contact.html" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
+        <a href="http://t.me/romashka_ls" target="_ blank" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
         <div class="search-box"></div>
         <div class="box"></div>
         <a class="search"><img src="img\premium-icon-search-3991270.png" alt=""></a>
@@ -20,15 +20,15 @@
     </header>
     <main>
         <div class="text_main">
-            <div class="text_main1">My skills</div>
+            <a href="" class="text_main1">My skills</a>
             <div class="text_main2">Python, HTML+CSS, JavaScript, version control (Git, GitHub, Gitlab, etc.), databases(PostgreSQL)</div>
-            <div class="text_main1">My works</div>
+            <a href="works.html" class="text_main1">My works</a>
             <div class="text_main2">To see my portfolio follow me on <a href="https://github.com/KozhemyakinaElizaveta" target="_ blank" style="text-decoration: none;">GitHub</a></div>
         </div>
         <div class="text_contact"></div>
         <div class="text_contact1">Hire me</div>
         <div class="text_contact2">We could work together?</div>
-        <form action="contact.html" method="get">
+        <form action="http://t.me/romashka_ls" method="get" target="_blank">
             <button class="custom-btn btn-1"><span>Contact</span></button>
         </form>
         <div class="main_box"></div>
