--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id = "block-body">
         <header>
-            <a href="contact.html" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
+            <a href="http://t.me/romashka_ls" target="_ blank" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
             <a href="resume.html" class="resume">Google Resume</a>
         </header>
         <main>
