--- a/works.html
+++ b/works.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <a href="http://t.me/romashka_ls" target="_ blank" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
         <a href="resume.html" class="resume">Google Resume</a>
         <div class="search-box"></div>
         <div class="box"></div>
