--- a/index.html
+++ b/index.html
@@ -7,26 +7,31 @@
     <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
-    <div id = "block-body">
-        <header>
-            <a href="http://t.me/romashka_ls" target="_ blank" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
+    <header>
+        <div id="first">
             <a href="resume.html" class="resume">Google Resume</a>
-        </header>
-        <main>
-            <a href="" style="text-decoration: none;" class="main-body1">L</a>
-            <a href="" style="text-decoration: none;" class="main-body2">i</a>
-            <a href="" style="text-decoration: none;" class="main-body3">z</a>
-            <a href="" style="text-decoration: none;" class="main-body4">a</a>
-            <a href="" style="text-decoration: none;" class="main-body5">Kozhemyakina</a>
+            <a href="http://t.me/romashka_ls" target="_ blank" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
+        </div>
+    </header>
+    <main>
+        <div id="second">
+            <div class="main-body">
+                <p class="l">L</p>
+                <p class="i">i</p>
+                <p class="z">z</p>
+                <p class="a">a</p>
+                <br>
+                <p class="main-body5">Kozhemyakina</p>
+            </div>
             <div class="wrapper">
                 <div class="text">My name is Liza Kozhemyakina</div>
             </div>
             <div class="box"></div>
             <a class="search"><img src="img\premium-icon-search-3991270.png" alt=""></a>
-        </main>
-        <footer>
-            <div class="made-by">© 2022 Elizaveta Kozhemyakina</div>
-        </footer>
-    </div> 
+        </div>
+    </main>
+    <footer>
+        <div class="made-by">© 2022 Elizaveta Kozhemyakina</div>
+    </footer>
 </body>
 </html>
