--- a/works.html
+++ b/works.html
@@ -8,16 +8,24 @@
 </head>
 <body>
     <header>
-        <a href="http://t.me/romashka_ls" target="_ blank" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
-        <a href="resume.html" class="resume">Google Resume</a>
-        <div class="search-box"></div>
-        <div class="box"></div>
-        <a class="search"><img src="img\premium-icon-search-3991270.png" alt=""></a>
-        <div class="text-search">Works by Liza Kozhemyakina</div>
-        <a href="index.html" style="text-decoration: none;" class="main-body1">L</a>
-        <a href="index.html" style="text-decoration: none;" class="main-body2">i</a>
-        <a href="index.html" style="text-decoration: none;" class="main-body3">z</a>
-        <a href="index.html" style="text-decoration: none;" class="main-body4">a</a>
+        <div id="first">
+            <div class="header-body">
+                <a href="index.html" style="text-decoration: none;" class="l">L</a>
+                <a href="index.html" style="text-decoration: none;" class="i">i</a>
+                <a href="index.html" style="text-decoration: none;" class="z">z</a>
+                <a href="index.html" style="text-decoration: none;" class="a">a</a>
+            </div>
+            <div id="second">
+                <div class="search-box"></div>
+                <div class="text-search">Works by Liza</div>
+                <div class="box"></div>
+                <a class="search"><img src="img\premium-icon-search-3991270.png" alt=""></a>
+            </div>
+        </div>
+        <div class="h_c">
+            <a href="resume.html" class="resume">Google Resume</a>
+            <a href="http://t.me/romashka_ls" target="_ blank" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
+        </div>
     </header>
     <div class="main_body">
         <input type="radio" name="position" checked />
@@ -27,7 +35,7 @@
         <input type="radio" name="position" />
         <main id="carousel">
             <div class="item"><a href='https://github.com/KozhemyakinaElizaveta/Kozhemyakina_BVT2107/tree/master/Schedule-bot' target="_ blank"><img src='img/bot.jpg'></a></div>
-            <div class="item"><a href='https://github.com/KozhemyakinaElizaveta/Kozhemyakina_BVT2107/tree/master/Calculator' target="_ blank"><img src='img/calc.jpg'></a></div>
+            <div class="item"><a href='https://github.com/KozhemyakinaElizaveta/Kozhemyakina_BVT2107/tree/master/Calculator' target="_ blank"><img src='img/calculator.jpg'></a></div>
             <div class="item"><a href='https://github.com/QuangoMGP/IT_project' target="_ blank"><img src='img/it.jpg'></a></div>
             <div class="item"></div>
             <div class="item"></div>
