--- a/index.html
+++ b/index.html
@@ -7,31 +7,47 @@
     <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
-    <header>
-        <div id="first">
-            <a href="resume.html" class="resume">Google Resume</a>
-            <a href="http://t.me/romashka_ls" target="_ blank" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
-        </div>
-    </header>
-    <main>
-        <div id="second">
-            <div class="main-body">
-                <p class="l">L</p>
-                <p class="i">i</p>
-                <p class="z">z</p>
-                <p class="a">a</p>
-                <br>
-                <p class="main-body5">Kozhemyakina</p>
+    <div class="container">
+        <header>
+            <div class="head-up">
+                <ul>
+                    <div class="h_b"><a href="resume.html">Google Resume</a></div>
+                    <div class="h_b"><a href="http://t.me/romashka_ls" target="_ blank">Contact</a></div>
+                    <div class="h_b">
+                        <p>👋</p>
+                    </div>
+                </ul>
             </div>
-            <div class="wrapper">
-                <div class="text">My name is Liza Kozhemyakina</div>
+            <!--<div id="first">
+                <a href="resume.html" class="resume">Google Resume</a>
+                <a href="http://t.me/romashka_ls" target="_ blank" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
+            </div>-->
+        </header>
+        <main>
+            <div class="mainmain">
+                <div class="main-body">
+                    <p class="l">L</p>
+                    <p class="i">i</p>
+                    <p class="z">z</p>
+                    <p class="a">a</p>
+                    <br>
+                    <p class="main-body5">Kozhemyakina</p>
+                </div>
+                <div class="wrapper">
+                    <div class="box">
+                        <div class="for-text">
+                            <div class="text">My name is Liza Kozhemyakina</div>
+                        </div>
+                            <a class="search"><img src="img\premium-icon-search-3991270.png" alt=""></a>
+                    </div>
+                </div>
             </div>
-            <div class="box"></div>
-            <a class="search"><img src="img\premium-icon-search-3991270.png" alt=""></a>
-        </div>
-    </main>
-    <footer>
-        <div class="made-by">© 2022 Elizaveta Kozhemyakina</div>
-    </footer>
+        </main>
+        <footer>
+            <div class="feet">
+                <div class="made-by">© 2022 Elizaveta Kozhemyakina</div>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
