--- a/works.html
+++ b/works.html
@@ -24,7 +24,6 @@
         </div>
         <div class="h_c">
             <a href="resume.html" class="resume">Google Resume</a>
-            <a href="http://t.me/romashka_ls" target="_ blank" class="contact"><img src="img\free-icon-contact-4542053.png" alt=""></a>
         </div>
     </header>
     <div class="main_body">
@@ -42,6 +41,7 @@
         </main>
     </div>
     <footer>
+        <div class="close"></div>
         <div class="made-by">© 2022 Elizaveta Kozhemyakina</div>
     </footer>
 </body>
