--- a/resume.html
+++ b/resume.html
@@ -7,59 +7,80 @@
     <link rel="stylesheet" href="static/resume_style.css">
 </head>
 <body>
-    <header>
-        <div id="first">
+    <div class="container">
+        <header>
             <div class="header-body">
-                <a href="index.html" style="text-decoration: none;" class="l">L</a>
-                <a href="index.html" style="text-decoration: none;" class="i">i</a>
-                <a href="index.html" style="text-decoration: none;" class="z">z</a>
-                <a href="index.html" style="text-decoration: none;" class="a">a</a>
+                <ul>
+                    <div class="logo">
+                        <a href="index.html" style="text-decoration: none;" class="liza">Liza</a>
+                    </div>
+                    <div class="search">
+                        <div class="search-box"></div>
+                        <div class="for-text">
+                            <div class="text">Google Resume</div>
+                        </div>
+                        <a class="search"><img src="img\premium-icon-search-3991270.png" alt=""></a>
+                    </div>
+                </ul>
             </div>
-            <div id="second">
-                <div class="search-box"></div>
-                <div class="text-search">Google Resume</div>
-                <div class="box"></div>
-                <a class="search"><img src="img\premium-icon-search-3991270.png" alt=""></a>
-            </div>
-        </div>
-    </header>
-    <main>
-        <div class="text_main">
-            <a href="" class="text_main1">My skills</a>
-            <div class="text_main2">Python, HTML+CSS, JavaScript, version control (Git, GitHub, Gitlab, etc.), databases(PostgreSQL)</div>
-            <a href="works.html" class="text_main1">My works</a>
-            <div class="text_main2">To see my portfolio follow me on <a href="https://github.com/KozhemyakinaElizaveta" target="_ blank" style="text-decoration: none;">GitHub</a></div>
-        </div>
-        <div class="text_contact"></div>
-        <div class="text_contact1">Hire me</div>
-        <div class="text_contact2">We could work together?</div>
-        <form action="http://t.me/romashka_ls" method="get" target="_blank">
-            <button class="custom-btn btn-1"><span>Contact</span></button>
-        </form>
-        <div id="third">
-            <div class="main_box"></div>
-            <div class="img_main"><img src="img\photo_2022-06-26_18-16-20.jpg"></div>
-            <div class="text_inf">
-                <div class="text_inf1">Kozhemyakina Elizaveta Romanovna</div>
-                <div class="text_inf2">frontend developer</div>
-                <div class="text-inf3">
-                    <div class="text_inf3">Age : 19 Occupation : Freelance Social network :</div>
-                    <div class="text_inf3">Localization : Beloozersky, Moscow region, Russia</div>
-                    <div class="text_inf3">Education : Moscow Technical University of Communications and Informatics (MTUCI)</div>
-                    <div class="text_inf3">Occupation : Freelance</div>
-                    <div class="text_inf3">Social network :</div>
+        </header>
+        <main>
+            <div class="main-body">
+                <div class="name">
+                    <div class="photo"><img src="img\photo_main.jpg" alt=""></div>
+                    <ul class="fio">
+                        <li class="one">Kozhemyakina Elizaveta Romanovna</li>
+                        <li class="two">frontend developer</li> 
+                    </ul>
+                </div>
+                <div class="view">
+                    <div class="collage"><img src="img\photo_collage.jpg" alt=""></div>
+                    <div class="front"><img src="img\front.jpg" alt=""></div>
+                </div>
+                <div class="line1"></div>
+                <div class="info">
+                    <div class="left">
+                            <div class="text_main">
+                                <a href="https://hh.ru/resume/4380426aff0af11fc20039ed1f577650596434" class="text_main1">My skills</a>
+                                <div class="text_main2">Java, Python, HTML+CSS, JavaScript, PHP, version control (Git), databases(PostgreSQL)</div>
+                                <a href="works.html" class="text_main1">My works</a>
+                                <div class="text_main2">To see my portfolio follow me on <a href="https://github.com/KozhemyakinaElizaveta" target="_ blank" style="text-decoration: none;">GitHub</a></div>
+                            </div>
+                            <div class="text_contact">
+                                <div class="text_contact1">Hire me</div>
+                                <div class="text_contact2">We could work together?</div>
+                                <form action="http://t.me/romashka_ls" method="get" target="_blank">
+                                    <button class="custom-btn btn-1"><span>Contact</span></button>
+                                </form>
+                            </div>
+                    </div>
+                    <div class="line2"></div>
+                    <div class="right">
+                        <ul class="about">
+                            <li class="first">About</li>
+                            <li class="else">Kozhemyakina Elizaveta is a novice Russian frontend developer with knowledge in many areas of IT and succeeding in them.</li>
+                            <li class="else"><b>Born:</b> May 24, 2003</li>
+                            <li class="else"><b>Occupation:</b> Freelance Social network :</li>
+                            <li class="else"><b>Localization:</b> Beloozersky, Moscow region, Russia</li>
+                            <li class="else"><b>Education:</b> Moscow Technical University of Communications and Informatics (MTUCI)</li>
+                            <li class="else"><b>Occupation:</b> Freelance</li>
+                            <li class="line3"></li>
+                            <li class="first">Profiles</li>
+                        </ul>
+                        <div class="sn">
+                            <a href="https://vk.com/id230880631" target="_blank" class="vk"><img src="img\vk.png" alt=""></a>
+                            <a href="http://t.me/romashka_ls"  target="_blank" class="tg"><img src="img\telegram.png" alt=""></a>
+                            <a href="https://github.com/KozhemyakinaElizaveta" target="_blank" class="git"><img src="img\github.png" alt=""></a>
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="line"></div>
-            <div class="sn">
-                <a href="https://vk.com/id230880631" target="_blank" class="vk"><img src="img\vk.png" alt=""></a>
-                <a href="http://t.me/romashka_ls"  target="_blank" class="tg"><img src="img\telegram.png" alt=""></a>
-                <a href="https://github.com/KozhemyakinaElizaveta" target="_blank" class="git"><img src="img\github.png" alt=""></a>
-            </div>.
-        </div>
-    </main>
-    <footer>
-        <div class="made-by">© 2022 Elizaveta Kozhemyakina</div>
-    </footer>
+        </main>
+        <footer>
+            <div class="feet">
+                <div class="made-by">© 2022 Elizaveta Kozhemyakina</div>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
