--- a/works.html
+++ b/works.html
@@ -7,42 +7,45 @@
     <link rel="stylesheet" href="static/works_style.css">
 </head>
 <body>
-    <header>
-        <div id="first">
+    <div class="container">
+        <header>
             <div class="header-body">
-                <a href="index.html" style="text-decoration: none;" class="l">L</a>
-                <a href="index.html" style="text-decoration: none;" class="i">i</a>
-                <a href="index.html" style="text-decoration: none;" class="z">z</a>
-                <a href="index.html" style="text-decoration: none;" class="a">a</a>
+                <ul>
+                    <div class="logo">
+                        <a href="index.html" style="text-decoration: none;" class="liza">Liza</a>
+                    </div>
+                    <div class="search">
+                        <div class="search-box"></div>
+                        <div class="for-text">
+                            <div class="text">Works by Lizzza</div>
+                        </div>
+                        <a class="search"><img src="img\premium-icon-search-3991270.png" alt=""></a>
+                    </div>
+                </ul>
+                <a href="resume.html" class="resume">Google Resume</a>
             </div>
-            <div id="second">
-                <div class="search-box"></div>
-                <div class="text-search">Works by Liza</div>
-                <div class="box"></div>
-                <a class="search"><img src="img\premium-icon-search-3991270.png" alt=""></a>
+        </header>
+        <main>
+            <div class="main_body">
+                <input type="radio" name="position" checked />
+                <input type="radio" name="position" />
+                <input type="radio" name="position" />
+                <input type="radio" name="position" />
+                <input type="radio" name="position" />
+                <div id="carousel">
+                    <div class="item"><a href="https://github.com/KozhemyakinaElizaveta/Kozhemyakina_BVT2107/tree/master/Schedule-bot" target="_ blank"></a><div class="name">Schedule telegram bot</div></div>
+                    <div class="item"><a href="https://github.com/KozhemyakinaElizaveta/it_java/tree/main/Lab_6" target="_ blank"></a><div class="name">Fractal generator</div></div>
+                    <div class="item"><a href="https://github.com/KozhemyakinaElizaveta/it_java/tree/main/Lab_78" target="_ blank"></a><div class="name">Web-scanner</div></div>
+                    <div class="item"><a href="" target="_ blank"></a></div>
+                    <div class="item"><a href="" target="_ blank"></a></div>
+                </div>
             </div>
-        </div>
-        <div class="h_c">
-            <a href="resume.html" class="resume">Google Resume</a>
-        </div>
-    </header>
-    <div class="main_body">
-        <input type="radio" name="position" checked />
-        <input type="radio" name="position" />
-        <input type="radio" name="position" />
-        <input type="radio" name="position" />
-        <input type="radio" name="position" />
-        <main id="carousel">
-            <div class="item"><a href='https://github.com/KozhemyakinaElizaveta/Kozhemyakina_BVT2107/tree/master/Schedule-bot' target="_ blank"><img src='img/bot.jpg'></a></div>
-            <div class="item"><a href='https://github.com/KozhemyakinaElizaveta/Kozhemyakina_BVT2107/tree/master/Calculator' target="_ blank"><img src='img/calculator.jpg'></a></div>
-            <div class="item"><a href='https://github.com/QuangoMGP/IT_project' target="_ blank"><img src='img/it.jpg'></a></div>
-            <div class="item"></div>
-            <div class="item"></div>
         </main>
+        <footer>
+            <div class="feet">
+                <div class="made-by">© 2022 Elizaveta Kozhemyakina</div>
+            </div>
+        </footer>
     </div>
-    <footer>
-        <div class="close"></div>
-        <div class="made-by">© 2022 Elizaveta Kozhemyakina</div>
-    </footer>
 </body>
 </html>
